lots of progress, but more to do